//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table PhotoAnalisys {
  id Int [pk, increment]
  idReport Int [not null]
  report Report [not null]
  url String [not null]
  name String [not null]
  index Int [not null]
  description String [not null]
}

Table DescriptionAnalisys {
  id Int [pk, increment]
  idReport Int [not null]
  report Report [not null]
  service String [not null]
  status String [not null]
}

Table Report {
  id Int [pk, increment]
  sites Site [not null]
  siteId Int [not null]
  dateService DateTime [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime
  finishedAt DateTime
  technician Technician [not null]
  technicianId String [not null]
  user User [not null]
  userId String [not null]
  analyst User
  analystId String
  scopeService ScopeService [not null]
  scopeServiceId Int [not null]
  photoAnalisys PhotoAnalisys [not null]
  descriptionAnalisys DescriptionAnalisys [not null]
}

Table Site {
  id Int [pk, increment]
  idSite String [unique, not null]
  altura String
  endereco String [not null]
  bairro String [not null]
  numero String [not null]
  cidade String [not null]
  uf String [not null]
  structureType StructureType [not null]
  structureTypeId Int [not null]
  client Client [not null]
  idClient String [not null]
  siteType SiteType [not null]
  siteTypeId Int [not null]
  Report Report [not null]
}

Table ScopeService {
  id Int [pk, increment]
  name String [not null]
  reports Report [not null]
}

Table Client {
  id String [pk]
  name String [not null]
  img String
  site Site [not null]
}

Table SiteType {
  id Int [pk, increment]
  name String [not null]
  sites Site [not null]
}

Table StructureType {
  id Int [pk, increment]
  name String [not null]
  sites Site [not null]
}

Table Technician {
  id String [pk]
  name String [not null]
  reports Report [not null]
}

Table User {
  id String [pk]
  name String [not null]
  email String [unique, not null]
  avatar String
  role Role [not null]
  passwordHash String [not null]
  createdAt DateTime [default: `now()`, not null]
  analyst Report [not null]
  Report Report [not null]
}

Enum Role {
  ADMIN
  USER
  ANALYST
  TECHNICIAN
  COORDINATOR
}

Ref: PhotoAnalisys.idReport > Report.id

Ref: DescriptionAnalisys.idReport > Report.id

Ref: Report.siteId > Site.id

Ref: Report.technicianId > Technician.id

Ref: Report.userId > User.id

Ref: Report.analystId > User.id

Ref: Report.scopeServiceId > ScopeService.id

Ref: Site.structureTypeId > StructureType.id

Ref: Site.idClient > Client.id

Ref: Site.siteTypeId > SiteType.id